--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "r3_example_common"
 version = "0.0.0"
-edition = "2021"
 publish = false
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [dependencies]
 embedded-graphics = { version = "0.7.1" }
