--- a/src/r3/Cargo.toml
+++ b/src/r3/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 name = "r3"
 version = "0.2.2"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 readme = "README.md"
 description = """
 R3-OS: Experimental static component-oriented RTOS for deeply embedded systems
 """
 categories = ["embedded", "no-std"]
 keywords = ["r3", "rtos"]
-repository = "https://github.com/r3-os/r3"
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 default = []
