--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "r3_kernel"
 version = "0.1.2"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 description = "The R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3"]
-repository = "https://github.com/r3-os/r3"
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 default = []
