--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "r3_port_std"
 version = "0.2.1"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 description = "Simulator port for the R3-OS original kernel"
 keywords = ["r3", "simulator"]
-repository = "https://github.com/r3-os/r3"
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 # Used for documentation builds [ref:doc_feature]
