--- a/src/r3_port_riscv/Cargo.toml
+++ b/src/r3_port_riscv/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "r3_port_riscv"
 version = "0.2.1"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 description = "RISC-V port for the R3-OS original kernel"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "riscv"]
-repository = "https://github.com/r3-os/r3"
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 emulate-lr-sc = []
