--- a/src/r3_portkit/Cargo.toml
+++ b/src/r3_portkit/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "r3_portkit"
 version = "0.2.1"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 description = "Utilities for writing a port of R3"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "simulator"]
-repository = "https://github.com/r3-os/r3"
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 # Used for documentation builds [ref:doc_feature]
