--- a/src/r3_test_suite/Cargo.toml
+++ b/src/r3_test_suite/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "r3_test_suite"
 version = "0.0.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
 categories = ["embedded", "no-std", "development-tools::testing"]
 description = "Test suite for R3"
 keywords = ["r3"]
-repository = "https://github.com/r3-os/r3"
 publish = false
+
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 
 [features]
 default = ["tests_all", "full"]
