chore(ci): remove backup file after `sed -i.bak`
Fixes Tagref reporting an error for having duplicate tag definitions in
`Cargo.toml` and `Cargo.toml.bak`.

The `-i` option with no suffix is not portable between GNU and BSD sed,
so this commit simply removes the backup file afterward.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,10 @@ jobs:
           # triple is provided.
           sed -E -i.bak 's/.*basic_.*//' Cargo.toml
           sed -E -i.bak 's/.*smp_rp_pico.*//' Cargo.toml
+        
+          # Make sure to remove the backup file, or else Tagref will report an
+          # error for having duplicate tag definitions
+          rm Cargo.toml.bak
 
       - name: Check cross-references with Tagref
         run: tagref
