chore: use workspace dependency inheritance
<https://doc.rust-lang.org/nightly/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,42 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/r3-os/r3"
 
+[workspace.dependencies]
+# Workspace packages.
+#
+# `r3_core` and `r3_core_ks` point to the same package, but `r3_core_ks` allows
+# the use of the APIs only covered by the kernel-side API stability (see
+# [ref:core_version]).
+#
+# The version requirements specified here affect all packages that inherit the
+# respective dependencies. However, when a version requirement changes due to a
+# version bump in one package, it doesn't always mean it's necessary to
+# transitively bump the version of a dependent package that inherits the version
+# requirement. The possible reasons to withhold a transitive version bump
+# include: (1) The change in the version requirement did not add new versions to
+# the allowed set, or the dependent package using an older dependency will pose
+# no problem to the package's users. (2) There has been no change in the
+# dependent package's code since the last publish. For example, when you bump
+# the major version of `r3_portkit`, `r3_port_arm_m` in the source tree will
+# have the version requirement of its `r3_portkit` bumped, but you don't have to
+# publish a new version of `r3_port_arm_m` because the version of `r3_portkit`
+# is no concern to the users of `r3_port_arm_m`. Though, you should do it if
+# the old version of `r3_portkit` is semver-incompatible with the latest one
+# and contains substantial bugs.
+arm_semihosting = { path = "src/arm_semihosting" }
+r3 = { path = "src/r3", version = "0.2.0" }
+r3_core = { path = "src/r3_core", version = "0.1.0", package = "r3_core" }  # Application-side API
+r3_core_ks = { path = "src/r3_core", version = "0.1.0", package = "r3_core" }  # Kernel-side API
+r3_kernel = { path = "src/r3_kernel", version = "0.1.0" }
+r3_port_arm = { path = "src/r3_port_arm", version = "0.2.0" }
+r3_port_arm_m = { path = "src/r3_port_arm_m", version = "0.3.0" }
+r3_port_riscv = { path = "src/r3_port_riscv", version = "0.2.0" }
+r3_port_std = { path = "src/r3_port_std", version = "0.2.0" }
+r3_portkit = { path = "src/r3_portkit", version = "0.2.0" }
+r3_support_rp2040 = { path = "src/r3_support_rp2040", version = "0.2.0" }
+r3_support_rza1 = { path = "src/r3_support_rza1", version = "0.2.0" }
+r3_test_suite = { path = "src/r3_test_suite", default-features = false }
+
 [patch.crates-io.riscv-0p5]
 # We need to enable `riscv/inline-asm` to work around
 # <https://github.com/rust-embedded/riscv/issues/69>. However, some external
