--- a/examples/basic_gr_peach/Cargo.toml
+++ b/examples/basic_gr_peach/Cargo.toml
@@ -8,10 +8,10 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-r3_support_rza1 = { path = "../../src/r3_support_rza1", features = ["semver-exempt"] }
-r3_port_arm = { path = "../../src/r3_port_arm" }
-r3_kernel = { path = "../../src/r3_kernel", features = ["system_time"] }
-r3 = { path = "../../src/r3" }
+r3_support_rza1 = { workspace = true, features = ["semver-exempt"] }
+r3_port_arm = { workspace = true }
+r3_kernel = { workspace = true, features = ["system_time"] }
+r3 = { workspace = true }
 
 rtt-target = { version = "0.3.0" }
 rza1 = { version = "0.2.0", features = ["cpg", "gpio", "scif"] }
