--- a/src/r3_test_runner/Cargo.toml
+++ b/src/r3_test_runner/Cargo.toml
@@ -8,7 +8,7 @@ license.workspace = true
 repository.workspace = true
 
 [dependencies]
-r3_test_suite = { path = "../r3_test_suite", default-features = false }
+r3_test_suite = { workspace = true }
 
 arg_enum_proc_macro = { version = "0.3.0" }
 aho-corasick = { version = "0.7.13" }
