--- a/src/r3_port_riscv_test_driver/Cargo.toml
+++ b/src/r3_port_riscv_test_driver/Cargo.toml
@@ -77,9 +77,9 @@ timer-sbi = []
 # --------------------------------------------------------------------
 
 [dependencies]
-r3_port_riscv = { path = "../r3_port_riscv", optional = true }
-r3_portkit = { path = "../r3_portkit", optional = true }
-r3 = { path = "../r3", optional = true }
+r3_port_riscv = { workspace = true, optional = true }
+r3_portkit = { workspace = true, optional = true }
+r3 = { workspace = true, optional = true }
 
 rtt-target = { version = "0.3.0", optional = true, features = ["riscv"] }
 e310x-hal = { version = "0.9.0", optional = true, features = ["g002"] }
@@ -97,15 +97,14 @@ log = { version = "0.4.8", optional = true }
 nb = { version = "1.0.0", optional = true }
 
 [dependencies.r3_kernel]
-path = "../r3_kernel"
+workspace = true
 features = [
     # enable all of the kernel optional features
     "full",
 ]
 
 [dependencies.r3_test_suite]
-path = "../r3_test_suite"
-default-features = false
+workspace = true
 features = [
     # compile the test case specified by `R3_TEST`
     "tests_selective",
