--- a/src/r3_support_rp2040/Cargo.toml
+++ b/src/r3_support_rp2040/Cargo.toml
@@ -24,9 +24,9 @@ semver-exempt = [
 doc = []
 
 [dependencies]
-r3_port_arm_m = { version = "0.3.0", path = "../r3_port_arm_m" }
-r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
-r3 = { version = "0.2.0", path = "../r3" }
+r3_port_arm_m = { workspace = true }
+r3_portkit = { workspace = true }
+r3 = { workspace = true }
 
 embedded-hal = { version = "0.2.4", optional = true }
 usbd-serial = { version = "0.1.1", optional = true }
