--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -22,10 +22,10 @@ semver-exempt = [
 doc = []
 
 [dependencies]
-r3_port_arm = { version = "0.2.0", path = "../r3_port_arm" }
-r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
-r3_kernel = { version = "0.1.0", path = "../r3_kernel" }
-r3 = { version = "0.2.0", path = "../r3" }
+r3_port_arm = { workspace = true }
+r3_portkit = { workspace = true }
+r3_kernel = { workspace = true }
+r3 = { workspace = true }
 
 embedded-hal = { version = "0.2.4", optional = true }
 rza1 = { version = "0.2.0", features = ["ostm"] }
