--- a/src/r3_kernel/Cargo.toml
+++ b/src/r3_kernel/Cargo.toml
@@ -36,6 +36,7 @@ svgbobdoc = { version = "0.3.0" }
 tokenlock = { version = "0.3.4", default-features = false }
 arrayvec = { version = "0.7.1", default-features = false }
 bitflags = { version = "1.2.1" }
+macropol = { version = "0.1.2" }
 chrono = { version = "0.4.13", optional = true, default-features = false }
 either = { version = "1.6.1", default-features = false }
 elain = { version = "0.3.0" }
