chore: rename `r3_core` deps to `r3_core_ks` for kernel-side uses
It's planned to use an irregular versioning rule for the kernel-side API
of `r3_core`. When we start using workspace dependency inheritance, the
version specification of a `r3_core` dependency will have to be moved to
a centralized place, where each dependency can only be associated with a
single version range. Since one dependency name can't be associated with
different version ranges for kernel-side and application-side uses, this
commit renames the `r3_core` dependencies of kernel-side packages to
`r3_core_ks`.

--- a/src/r3_port_std/Cargo.toml
+++ b/src/r3_port_std/Cargo.toml
@@ -13,8 +13,8 @@ repository.workspace = true
 doc = []
 
 [dependencies]
+r3_core_ks = { version = "0.1.0", path = "../r3_core", package = "r3_core" }
 r3_kernel = { version = "0.1.0", path = "../r3_kernel" }
-r3_core = { version = "0.1.0", path = "../r3_core" }
 
 atomic_ref = { version = "0.2.0" }
 env_logger = { version = "0.8.4" }
