--- a/src/r3_support_rza1/Cargo.toml
+++ b/src/r3_support_rza1/Cargo.toml
@@ -1,13 +1,12 @@
 [package]
 name = "r3_support_rza1"
 version = "0.2.2"
+edition = "2021"
+license = "MIT OR Apache-2.0"
 description = "Supporting package for running R3-OS on Renesas RZ/A1"
 categories = ["embedded", "no-std"]
 keywords = ["r3", "arm", "renesas"]
-
-edition.workspace = true
-license.workspace = true
-repository.workspace = true
+repository = "https://github.com/r3-os/r3"
 
 [features]
 semver-exempt = [
@@ -22,10 +21,10 @@ semver-exempt = [
 doc = []
 
 [dependencies]
-r3_port_arm = { workspace = true }
-r3_portkit = { workspace = true }
-r3_kernel = { workspace = true }
-r3 = { workspace = true }
+r3_port_arm = { version = "0.2.0", path = "../r3_port_arm" }
+r3_portkit = { version = "0.2.0", path = "../r3_portkit" }
+r3_kernel = { version = "0.1.0", path = "../r3_kernel" }
+r3 = { version = "0.2.0", path = "../r3" }
 
 embedded-hal = { version = "0.2.4", optional = true }
 rza1 = { version = "0.2.0", features = ["ostm"] }
