chore(ci): add explicit `permissions` sections
<https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#permissions>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 on:
   pull_request:
   push:
+permissions:
+  contents: read
+  checks: write
 
 jobs:
   # Do a quick check before proceeding to full tests
