chore(ci): upgrade `JamesIves/github-pages-deploy-action` to 4.4.0
<https://github.com/JamesIves/github-pages-deploy-action/releases/tag/4.2.0>

<https://github.com/JamesIves/github-pages-deploy-action/releases/tag/4.3.0>

> Implements a new option available behind a flag, `force`. If set to
> `false` the action will no longer force push [...]. In a future
> version `false` will be set as the default.

<https://github.com/JamesIves/github-pages-deploy-action/releases/tag/4.4.0>

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -61,12 +61,13 @@ jobs:
 
       # If we are on the main branch, deploy it to the website
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@4.1.0
+        uses: JamesIves/github-pages-deploy-action@v4.4.1
         if: github.ref == 'refs/heads/🦆'
         with:
           branch: gh-pages
           folder: output
           single-commit: true
+          force: true
 
       # Otherwise, put it on the Actions page to allow download
       - name: Archive output
