--- a/.github/workflows/report-size.yml
+++ b/.github/workflows/report-size.yml
@@ -36,8 +36,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install Rust
-        # FIXME: Switch back when actions-rs/toolchain#209 is merged
-        uses: r3-os/actions-rust-toolchain@patch/pr-209
+        # FIXME: Switch back when actions-rs/toolchain#{209,220,222} is merged
+        uses: r3-os/actions-rust-toolchain@a862b6623c178b43a3135516442a5f72fb5c1877
         with:
           profile: minimal
           components: rust-src
