chore(ci): switch to a custom fork of actions-rs/clippy-check
This fork includes [actions-rs/clippy-check#168][1], the PR that would
upgrade the Node.js version used by it and resolve the "Node.js 12
actions are deprecated" warnings.

[1]: https://github.com/actions-rs/cargo/pull/217

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,8 @@ jobs:
         run: tagref
 
       - name: Clippy
-        uses: actions-rs/clippy-check@v1
+        # FIXME: Switch back when actions-rs/clippy-check#168 gets merged
+        uses: r3-os/actions-rust-clippy-check@7418fd383746dc33a54d80bdba01d3ea74e7105b
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --workspace
